// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> renders a horizontal Divider 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="tone.960"
    dividerDirection="horizontal"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(224, 228, 249, 0.54)",
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`<Divider /> renders a vertical Divider 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="tone.960"
    dividerDirection="vertical"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(224, 228, 249, 0.54)",
          "height": "100%",
          "width": 1,
        },
      ]
    }
  />
</View>
`;
